Use separate library to do base64 encoding in Java
default and jersey2 clients to make it work in both JVM and Android